# lz77

./: .gitignore  CMakeLists.txt  README.md  ToMakefile  arton50077.h  beast00077.h  bitfield.c  dcmoto.ini  fill.bck  fill.lz  fill_u.bck  floppy.fd  floppy.sap  fouAPi0077.h  lz77.c  lz77.h  lz77.kdev4  lz77.s  lz77.tgz  lzbuffer.c  lzfile.c  main.c  maupassant.lz  maupassant1024.lz  maupassant3k.lz  maupassant3k_u.bck  maupassant512.lz  maupassant65k.lz  maupassant65k_u.bck  nimoy0077.h  nimoy0177.h  test.bf  thomso0077.h  tolz.c  tolz.s  tolzbuf.c  tolzbuf.s
.cache/clangd/index/: lz77.c.A2B96150090CB5D0.idx  lz77.h.E38F8DABD8427203.idx  main.c.64191CC9F3D31ACD.idx
.kdev4/: lz77.kdev4
images/: arton40077.h  artonb0077.h
samples/: maupassant.lz  maupassant.txt  maupassant1024.txt  maupassant3k.lz  maupassant512.bck  maupassant_u.lz
